# reqstudio

./: .gitignore  LICENSE  README.md  TODO.md  WORKPLAN.MD  app.py  pyproject.toml  reqs.txt  requirements.txt
api/: docs_server.py  readme.md
api/pluggable/: readme.md
api/pluggable/PYTHON/: manager.py
core/: __init__.py  highlighter.py  renderer.py  templates.py  utils.py
core/cli/: readme.md
core/git_extensions/: ci_validate.py  git-req.py
core/git_extensions/hooks/: commit-msg.sample
core/git_extensions/schemas/: matrix.schema.json
core/ui/: findreplace.py  search.py  startup.py  theme.py
dbms/: REQSTUDIO-REGULATED-PLAN.md  REQSTUDIO-SEMANTIC-INDEX.md
docs/: README.md  app.js  build_static.py  index.html  styles.css
docs/pages/: api.html  app.html  architecture.html  changelog.html  cli.html  configuration.html  contributing.html  core-git-backend.html  core-highlighter.html  core-renderer.html  core-templates.html  core-utils.html  core.html  dbms.html  docs-server.html  docs-static.html  export.html  faq.html  getting-started.html  git.html  glossary.html  install.html  license.html  overview.html  roadmap.html  srs-ids.html  templates.html  troubleshooting.html  ui.html
install/: Makefile  README.md
install/docker/: Dockerfile  docker-compose.yml  readme.md
install/homebrew/: README.md  reqstudio.rb
install/macos/: create_app_bundle.sh
install/unix/: install_reqstudio.sh  readme.md  uninstall_reqstudio.sh
install/windows/: install_reqstudio.ps1  launch_reqstudio.ps1  readme.md  uninstall_reqstudio.ps1
(+4 files in other folders)
